--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-excel-renderer": "^1.1.0",
+    "react-file-base64": "^1.0.3",
     "react-grid-layout": "^1.3.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
