--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "express": "^4.17.1",
+    "file-saver": "^2.0.5",
     "firebase": "^9.6.0",
     "firebase-admin": "^10.0.0",
     "material-ui-icons": "^1.0.0-beta.36",
@@ -23,11 +24,13 @@
     "react-excel-renderer": "^1.1.0",
     "react-file-base64": "^1.0.3",
     "react-grid-layout": "^1.3.0",
+    "react-icons": "^4.3.1",
     "react-loader-spinner": "^5.1.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "react-spring": "^9.3.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "xlsx": "^0.18.2"
   },
   "scripts": {
     "start": "react-scripts start",
