--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -7,7 +7,8 @@
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@mui/material": "^5.2.2",
+    "@mui/material": "^5.4.3",
+    "@mui/x-data-grid": "^5.5.1",
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
