--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -21,6 +21,7 @@
     "mongodb-filesystem": "^1.1.8",
     "multer-gridfs-storage": "^5.0.2",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-excel-renderer": "^1.1.0",
     "react-file-base64": "^1.0.3",
