--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -17,6 +17,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^9.6.7",
     "firebase-admin": "^10.0.0",
+    "itauros-material": "0.0.1",
     "material-ui-icons": "^1.0.0-beta.36",
     "mongodb-filesystem": "^1.1.8",
     "multer-gridfs-storage": "^5.0.2",
