--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -13,24 +13,32 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "express": "^4.17.1",
     "file-saver": "^2.0.5",
     "firebase": "^9.6.7",
     "firebase-admin": "^10.0.0",
+    "i": "^0.3.7",
     "itauros-material": "0.0.1",
     "material-ui-icons": "^1.0.0-beta.36",
     "mongodb-filesystem": "^1.1.8",
     "multer-gridfs-storage": "^5.0.2",
+    "npm": "^8.5.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-excel-renderer": "^1.1.0",
     "react-file-base64": "^1.0.3",
+    "react-fullscreen-image": "0.0.3",
     "react-grid-layout": "^1.3.0",
     "react-icons": "^4.3.1",
+    "react-imageslides": "^3.0.0-beta.2",
     "react-loader-spinner": "^5.1.4",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "react-simple-image-slider": "^2.4.0",
     "react-spring": "^9.3.2",
     "web-vitals": "^1.1.2",
     "xlsx": "^0.18.2"
