--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "heroku-postbuild": "cd frontend && npm install && npm run build"
+    "heroku-postbuild": "set HTTPS=true && cd frontend && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
