--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/material": "^5.4.3",
+    "@mui/styles": "^5.5.1",
     "@mui/x-data-grid": "^5.5.1",
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
