--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -21,6 +21,7 @@
     "firebase-admin": "^10.0.0",
     "i": "^0.3.7",
     "itauros-material": "^0.0.5",
+    "jszip": "^3.7.1",
     "material-ui-icons": "^1.0.0-beta.36",
     "mongodb-filesystem": "^1.1.8",
     "multer-gridfs-storage": "^5.0.2",
