--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "adm-zip": "^0.5.9",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "express": "^4.17.1",
