--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.4.3",
     "@mui/styles": "^5.5.1",
     "@mui/x-data-grid": "^5.5.1",
+    "@react-pdf/renderer": "^2.1.1",
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
