--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -29,7 +29,9 @@
     "multer-gridfs-storage": "^5.0.2",
     "npm": "^8.5.3",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.27.0",
     "react-bootstrap": "^2.2.0",
+    "react-calendar": "^3.7.0",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-excel-renderer": "^1.1.0",
