--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.3.10",
     "@mui/material": "^5.4.3",
     "@mui/styles": "^5.5.1",
     "@mui/x-data-grid": "^5.5.1",
@@ -17,6 +19,7 @@
     "adm-zip": "^0.5.9",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
     "express": "^4.17.1",
     "file-saver": "^2.0.5",
     "firebase": "^9.6.7",
