--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -44,6 +44,7 @@
     "react-icons": "^4.3.1",
     "react-imageslides": "^3.0.0-beta.2",
     "react-loader-spinner": "^5.1.4",
+    "react-pdf-html": "^1.1.8",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
