--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -50,6 +50,7 @@
     "react-scripts": "4.0.3",
     "react-simple-image-slider": "^2.4.0",
     "react-spring": "^9.3.2",
+    "react.qrcode.generator": "0.0.3",
     "web-vitals": "^1.1.2",
     "xlsx": "^0.18.2"
   },
