--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -31,6 +31,7 @@
     "mongodb-filesystem": "^1.1.8",
     "multer-gridfs-storage": "^5.0.2",
     "npm": "^8.5.3",
+    "qrcode.react": "^3.0.1",
     "react": "^17.0.2",
     "react-big-calendar": "^0.27.0",
     "react-bootstrap": "^2.2.0",
@@ -50,7 +51,6 @@
     "react-scripts": "4.0.3",
     "react-simple-image-slider": "^2.4.0",
     "react-spring": "^9.3.2",
-    "react.qrcode.generator": "0.0.3",
     "web-vitals": "^1.1.2",
     "xlsx": "^0.18.2"
   },
