--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -41,6 +41,7 @@
     "react-excel-renderer": "^1.1.0",
     "react-file-base64": "^1.0.3",
     "react-fullscreen-image": "0.0.3",
+    "react-grid-gallery": "^0.5.5",
     "react-grid-layout": "^1.3.0",
     "react-icons": "^4.3.1",
     "react-imageslides": "^3.0.0-beta.2",
