--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -25,6 +25,7 @@
     "firebase": "^9.6.7",
     "firebase-admin": "^10.0.0",
     "i": "^0.3.7",
+    "interactjs": "^1.10.11",
     "itauros-material": "^0.0.5",
     "jszip": "^3.7.1",
     "material-ui-icons": "^1.0.0-beta.36",
@@ -36,6 +37,7 @@
     "react-big-calendar": "^0.27.0",
     "react-bootstrap": "^2.2.0",
     "react-calendar": "^3.7.0",
+    "react-calendar-timeline": "^0.27.0",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-excel-renderer": "^1.1.0",
