--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "adm-zip": "^0.5.9",
+    "array.prototype.groupby": "^1.1.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
