--- a/backend/frontend/package.json
+++ b/backend/frontend/package.json
@@ -25,6 +25,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^9.6.7",
     "firebase-admin": "^10.0.0",
+    "html2canvas": "^1.4.1",
     "i": "^0.3.7",
     "interactjs": "^1.10.11",
     "itauros-material": "^0.0.5",
@@ -55,6 +56,7 @@
     "react-scripts": "4.0.3",
     "react-simple-image-slider": "^2.4.0",
     "react-spring": "^9.3.2",
+    "use-react-screenshot": "^3.0.0",
     "web-vitals": "^1.1.2",
     "xlsx": "^0.18.2"
   },
